# lsass-fuzz

./: .gitignore  README.md  lsass-fuzz.sln
harness/: harness.vcxproj  harness.vcxproj.filters
harness/src/: harness.h  lsalogonuser-interactive-logon.cpp  lsalogonuser-interactive-logon.h  lsalogonuser-kerb-interactive-logon.cpp  lsalogonuser-kerb-interactive-logon.h  lsalogonuser-msv1-interactive-logon.cpp  lsalogonuser-msv1-interactive-logon.h  main.cpp  sample.cpp  sample.h
helper-driver/: helper-driver.inf  helper-driver.vcxproj  helper-driver.vcxproj.filters
helper-driver/src/: main.c
libafl-fuzz/: .gitignore  Cargo.toml  exec-n.py  exec-one.py  exec.cmd  exec2.cmd  kill.cmd
libafl-fuzz/src/: main.rs
lsass-iat-hook/: lsass-iat-hook.vcxproj  lsass-iat-hook.vcxproj.filters
lsass-iat-hook/src/: driver.cpp  driver.h  finder.cpp  finder.h  fnv.cpp  fnv.h  gateway.cpp  gateway.h  hook.cpp  hook.h  ipc.cpp  ipc.h  main.cpp
